@@ -1,6 +1,7 @@
 2.5.5 (20.07.2019):
 
 * Fix occasional error messages when clearing all pages
+* Only set paper to Manual if not applying profile
 * Update to Hungarian translation (thanks to csola)
 
 
